# astropalmerio

./: MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  update_version.sh
dev/conda_envs/: astropalmerio_env.yml  dev_env.yaml  dev_env.yml
dev/notebooks/: Color palette.ipynb  Debugger.ipynb  Example Balmer decrement.ipynb  Example distribution uncertainty.ipynb  Example emission line fitting.ipynb  Example star-formation rate.ipynb  Linear to Log sampling comparison.ipynb  PDF_sampling_comparaison.ipynb
docs/: api.rst  conf.py  index.rst  sampling.rst  usage.rst
docs/Examples/: Example Balmer decrement.ipynb  Example distribution uncertainty.ipynb  Example emission line fitting.ipynb  Example sample size.ipynb  Example star-formation rate.ipynb
src/astropalmerio/: __init__.py
src/astropalmerio/data/: emission_lines.csv  emission_lines.tsv  met_cal_for_M08_method.txt
src/astropalmerio/galaxies/: M08.py  __init__.py  extinction.py  properties.py
src/astropalmerio/io/: __init__.py  ascii.py  fits.py
src/astropalmerio/mc/: MC_var.py  __arithmetic_MC_var.py  __init__.py  distributions.py  drawings.py  realizations.py  sampling.py  utils.py  visualization.py
src/astropalmerio/spectra/: __init__.py  conversions.py  emission_lines.py  reduction.py  utils.py  visualization.py
tests/mc/: test_MC_var.py  test_drawings.py  test_utils.py
