[metadata]
name = astropalmerio
version = attr: astropalmerio.__version__
author = Jesse Palmerio
author_email = jesse.palmerio@obspm.fr
description = A Python package for scientific data analysis and visualization. 
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/JPalmerio/astropalmerio
project_urls =
    Bug Tracker = https://github.com/JPalmerio/astropalmerio/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.24
    scipy>=1.10
    astropy>=5.2

[options.packages.find]
where = src
include = astropalmerio*

[options.package_data]
zhunter.data =
    *.tsv
    *.txt

[flake8]
ignore = E231, E226, W503
max-line-length = 88
extend-ignore = E203